charts/gateway-sno/dgw/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dgw
  labels:
    app: dgw
spec:
  # host: auto determined - no need to provide host name
  to:
    kind: Service
    name: dgw
    weight: 100
  port:
    targetPort: 80-tcp
  wildcardPolicy: None
